complete plugin base work and its feature create form, edit form, show form by shortcode and delete form also render form on frontend with delete functionality

--- a/assets/admin/formfield/css/simple_form_create.css
+++ b/assets/admin/formfield/css/simple_form_create.css
@@ -132,3 +132,9 @@ div#create_form_btn {
 .qbf_tabs a {
     text-decoration: none;
 }
+
+/* Hide button temp  */
+li#add-page-tab {
+    display: none;
+}
+
